--- a/1-exchanges/flexiswap/Cargo.toml
+++ b/1-exchanges/flexiswap/Cargo.toml
@@ -8,6 +8,7 @@ sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 k256 = { version = "0.10.2", features = ["ecdsa-core"] }
 getrandom = { features = ["custom"] } # for wasm target need custom
+radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" } # for Instruction
 
 [dev-dependencies]
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
