--- a/1-exchanges/hareswap/Cargo.toml
+++ b/1-exchanges/hareswap/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
-k256 = { version = "0.10.2", features = ["ecdsa-core"] }
+k256 = { version = "0.10.2", features = ["ecdsa-core", "sha256"] }
 getrandom = { features = ["custom"] } # for wasm target need custom
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" } # for Instruction
 
