--- a/1-exchanges/hareswap/hare/Cargo.toml
+++ b/1-exchanges/hareswap/hare/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 [dependencies]
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
+radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
+simulator = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 k256 = { version = "0.10.2", features = ["ecdsa-core", "sha256"] }
-getrandom = { features = ["custom"] } # for wasm target need custom
 hareswap = { path = "../" }
 transaction-manifest = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" } # for CLI
 clap = "3.1.6"
