excess comment removed

--- a/1-exchanges/hareswap/hare/Cargo.toml
+++ b/1-exchanges/hareswap/hare/Cargo.toml
@@ -12,5 +12,5 @@ k256 = { version = "0.10.2", features = ["ecdsa", "keccak256", "sha256"] }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
-transaction-manifest = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" } # for CLI
+transaction-manifest = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 simulator = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
