--- a/1-exchanges/hareswap/testing/.gitignore
+++ b/1-exchanges/hareswap/testing/.gitignore
@@ -1,9 +1,6 @@
-maker.pub
-maker.pri
-maker_setup.rtm
-maker_setup.rtmc
-maker_setup.trace
-partial_order.txt
-signed_order.txt
-taker_submit_option1.rtm
-taker_submit_option1.rtmc
+*.pub
+*.pri
+*.rtm
+*.rtmc
+*.txt
+*.trace
