update the demo readme and warning cleanup

--- a/1-exchanges/hareswap/Cargo.toml
+++ b/1-exchanges/hareswap/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.3.0" }
 k256 = { version = "0.10.2", features = ["ecdsa-core", "sha256"] }
-getrandom = { features = ["custom"] } # getrandom is used indirectly by k256, but for the wasm target we must select the custom feature
+getrandom = { version = "0.2.5", features = ["custom"] } # getrandom is used indirectly by k256, but for the wasm target we must select the custom feature
 hex = "0.4.3"
 
 [dev-dependencies]
