--- a/1-exchanges/RaDEX/Cargo.toml
+++ b/1-exchanges/RaDEX/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-sbor = { path = "/Users/omarabdulla/radix/radixdlt-scrypto/sbor" }
-scrypto = { path = "/Users/omarabdulla/radix/radixdlt-scrypto/scrypto" }
+sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.0" }
+scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.0" }
 
 [dev-dependencies]
-radix-engine = { path = "/Users/omarabdulla/radix/radixdlt-scrypto/radix-engine" }
+radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.0" }
 
 [profile.release]
 opt-level = 's'     # Optimize for size.
@@ -18,3 +18,4 @@ panic = 'abort'     # Abort on panic.
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
