--- a/scrypto-bond-frontend/package.json
+++ b/scrypto-bond-frontend/package.json
@@ -6,14 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "axios": "^0.27.2",
+    "create-react-native-app": "^3.8.0",
+    "next": "^12.2.2",
+    "preline": "^1.1.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-native": "^0.69.1",
+    "react-router-dom": "^6.3.0",
+    "react-table": "^7.8.0",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
