--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ Cargo.lock
 # Flamegraph profiles
 flamegraph.svg
 3-lending/LendingDApp/node_modules
+3-lending/LendingDApp/public/lending_dapp.wasm
+3-lending/LendingDApp/public/loan_application.wasm
+3-lending/LendingDApp/TODO.md
