--- a/4-portfolio-management-yield-farming/placeholder/Cargo.toml
+++ b/4-portfolio-management-yield-farming/placeholder/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
-radex = {git = "https://github.com/0xOmarA/RaDEX.git" }
+radex = {git = "https://github.com/PostNutCIarity/RaDEX.git" }
 
 [dev-dependencies]
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
