--- a/4-portfolio-management-yield-farming/placeholder/Cargo.toml
+++ b/4-portfolio-management-yield-farming/placeholder/Cargo.toml
@@ -8,6 +8,7 @@ sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
 radex = {git = "https://github.com/PostNutCIarity/RaDEX.git" }
 degenfi = {git = "https://github.com/PostNutCIarity/degenfi.git" }
+num-rational = "0.4"
 
 [dev-dependencies]
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
