--- a/4-portfolio-management-yield-farming/PortfolioDApp/Cargo.toml
+++ b/4-portfolio-management-yield-farming/PortfolioDApp/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
 sha2 = "0.10"
-rand = "0.8.3"
-getrandom = { version = "0.2", features = ["js"] }
+#rand = "0.8.3"
+#getrandom = { version = "0.2", features = ["js"] }
 
 [dev-dependencies]
 radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
