Added trading functionality for the pool manager of the investment_pool.
Related to this also included the Decentralized Exchange (DEX).
Code compiles, but no tests have been done yet.

--- a/4-portfolio-management-yield-farming/RadHedge/Cargo.toml
+++ b/4-portfolio-management-yield-farming/RadHedge/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
-RaDEX =  { path = "C:/Users/Frederik S/DltDemos/tryRust/scrypto-challenges_official/1-exchanges/RaDEX"}
+radex =  { path = "C:/Users/Frederik S/DltDemos/tryRust/RaDEX/scrypto-package"}
 price-oracle = { git = "https://github.com/radixdlt/scrypto-examples", rev = "6fc0c01e" }
 
 [dev-dependencies]
