Add some documentation and the first transaction manifests to run the tests.
My works remains unfinished. This is not fully tested yet.

--- a/4-portfolio-management-yield-farming/RadHedge/Cargo.toml
+++ b/4-portfolio-management-yield-farming/RadHedge/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
 scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
-radex =  { path = "C:/Users/Frederik S/DltDemos/tryRust/RaDEX/scrypto-package"}
+radex =  { git = "https://github.com/0xOmarA/RaDEX", rev = "5393024a" }
 price-oracle = { git = "https://github.com/radixdlt/scrypto-examples", rev = "6fc0c01e" }
 
 [dev-dependencies]
