--- a/5-DAO/ArchDAO/Cargo.toml
+++ b/5-DAO/ArchDAO/Cargo.toml
@@ -4,13 +4,15 @@ version = "1.0.0"
 edition = "2021"
 
 [dependencies]
-sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
-scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
+sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.5.1" } 
+scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.5.1" } 
 regex = "1"
 lazy_static = "1.4.0"
 
 [dev-dependencies]
-radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
+radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.5.1" } 
+#transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.5.1" } 
+#scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.5.1" } 
 
 [profile.release]
 opt-level = 's'     # Optimize for size.
@@ -18,6 +20,12 @@ lto = true          # Enable Link Time Optimization.
 codegen-units = 1   # Reduce number of codegen units to increase optimizations.
 panic = 'abort'     # Abort on panic.
 strip = "debuginfo" # Strip debug info.
+overflow-checks = true # Panic in the case of an overflow. 
 
 [lib]
 crate-type = ["cdylib", "lib"]
+
+
+
+
+
