--- a/3-lending/rai-test/dependencies/oracle_placeholder/Cargo.toml
+++ b/3-lending/rai-test/dependencies/oracle_placeholder/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
-scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
+sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.6.0" } 
+scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.6.0" } 
 
 [dev-dependencies]
-radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.4.1" }
+radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.6.0" } 
+transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.6.0" } 
+scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.6.0" } 
 
 [profile.release]
 opt-level = 's'     # Optimize for size.
@@ -16,6 +18,7 @@ lto = true          # Enable Link Time Optimization.
 codegen-units = 1   # Reduce number of codegen units to increase optimizations.
 panic = 'abort'     # Abort on panic.
 strip = "debuginfo" # Strip debug info.
+overflow-checks = true # Panic in the case of an overflow. 
 
 [lib]
 crate-type = ["cdylib", "lib"]
