--- a/7-defi-devpost/kl_protocol/frontend/package.json
+++ b/7-defi-devpost/kl_protocol/frontend/package.json
@@ -34,6 +34,7 @@
 		"@svelteuidev/core": "^0.10.0",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-forms": "^2.3.1",
-		"svelte-local-storage-store": "^0.4.0"
+		"svelte-local-storage-store": "^0.4.0",
+		"svelte-modals": "^1.2.1"
 	}
 }
